// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CartLink /> should NOT render quantity if cart is null 1`] = `
<DocumentFragment>
  .c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 > svg {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: -webkit-transform 0.2s;
  -webkit-transition: transform 0.2s;
  transition: transform 0.2s;
  fill: #777;
  width: 3.4rem;
  height: 3.4rem;
}

.c0 {
  position: relative;
}

<a
    class="c0"
    data-testid="CartLink"
  >
    <div
      class="c1"
      color=""
    >
      <svg>
        cart.svg
      </svg>
    </div>
  </a>
</DocumentFragment>
`;

exports[`<CartLink /> should NOT render quantity if cart length is 0 1`] = `
<DocumentFragment>
  .c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 > svg {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: -webkit-transform 0.2s;
  -webkit-transition: transform 0.2s;
  transition: transform 0.2s;
  fill: #777;
  width: 3.4rem;
  height: 3.4rem;
}

.c0 {
  position: relative;
}

<a
    class="c0"
    data-testid="CartLink"
  >
    <div
      class="c1"
      color=""
    >
      <svg>
        cart.svg
      </svg>
    </div>
  </a>
</DocumentFragment>
`;

exports[`<CartLink /> should render everything correctly with quantity 1 1`] = `
<DocumentFragment>
  .c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c2 > svg {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: -webkit-transform 0.2s;
  -webkit-transition: transform 0.2s;
  transition: transform 0.2s;
  fill: #777;
  width: 3.4rem;
  height: 3.4rem;
}

.c0 {
  position: relative;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  background-color: #1E8BC3;
  color: #FAFAFA;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 2.2rem;
  font-size: 1.3rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: absolute;
  top: -0.1rem;
  right: -0.1rem;
  width: 2.2rem;
  z-index: 10;
}

<a
    class="c0"
    data-testid="CartLink"
  >
    <div
      class="c1"
      data-testid="CartLink-quantity"
    >
      1
    </div>
    <div
      class="c2"
      color=""
    >
      <svg>
        cart.svg
      </svg>
    </div>
  </a>
</DocumentFragment>
`;
